Fix:fix margin in RecentlyVistied.js to make it not overlap with MainNav and HomeNav #99

--- a/front-end/src/home/RecentlyVisited.css
+++ b/front-end/src/home/RecentlyVisited.css
@@ -1,5 +1,5 @@
-div.RecentlyVisited{
-    top: 50px;
-    left: 50px;
-    position: relative;
+div.Recently-Visited{
+    margin-top: 40px;
+    margin-bottom: 40px;
+
 }
